# pothos

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
src/: manage.py
src/app/: auth.py  forms.py  models.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_user_currency.py  0004_transaction_tags.py  0005_auto_20210619_1834.py  0006_alter_transaction_transaction_date.py  0007_remove_transaction_transaction_date.py  0008_transaction_transaction_date.py  0009_alter_transaction_transaction_date.py  0010_alter_transaction_transaction_date.py
src/app/static/css/: main.css  main.sass
src/app/templates/: base.html  budget.html  index.html
src/auth/: __init__.py
src/pothos/: asgi.py  settings.py  urls.py  wsgi.py
