[tool.poetry]
name = "pothos"
version = "0.1.0"
description = "Budget better."
authors = ["cs-gang"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
requests = "^2.25.1"
firebase-admin = "^5.0.1"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^21.6b0"
taskipy = "^1.8.1"

[tool.taskipy.tasks]
runserver = "poetry run python ./src/manage.py runserver"
migrate = "poetry run python ./src/manage.py migrate"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
